...
    <string name="msg_answer_added_success">The answer has been saved to the log</string>
    <string name="msg_answer_updated_success">The answer has been updated</string>
    <string name="msg_answer_deleted_success">The answer has been deleted</string>
    <string name="msg_restore_built_in_questions_success">Built-in questions have been restored</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_clear_log">Clear log</string>
    <string name="btn_restore">Restore</string>
...
    <string name="cd_open_drawer">Open navigation drawer</string>
    <string name="cd_back">Back</string>
    <string name="cd_log">Log</string>
    <string name="cd_edit">Edit</string>
    <string name="cd_delete">Delete</string>
    <string name="cd_hide">Hide</string>
    <string name="cd_add_question">Add question</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_more">More options</string>
</resources>

