...
                onValueChange = { text = it },
                placeholder = { Text(stringResource(R.string.hint_question_text)) },
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(top = 16.dp)
                    .testTag("questionSheetTextField"),
            )
            if (question == null) {
                Text(
                    text = stringResource(R.string.msg_question_answers_free_text_hint),
                    style = MaterialTheme.typography.bodySmall,
                    color = MaterialTheme.colorScheme.onSurfaceVariant,
...
